offset div height fix and scrollbar removed from sight

--- a/css/style.css
+++ b/css/style.css
@@ -61,9 +61,13 @@ div {
 }
 #timeline {
     width: var(--timeline-width);
-    overflow: auto;
+    overflow-x: auto;
     overflow-y: hidden;
     font-size: 12px;
+    scrollbar-width: none;
+}
+#timeline::-webkit-scrollbar {
+    display:none;
 }
 #timeline div {
     border: none;
